added the first blog

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second repo
-        
+
     </title>
+    <link rel="stylesheet" href="noman.css">
 </head>
 <body>
+    <div>
+        <h2>
+            My First Blog
+        </h2>
+        <br>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae nihil ducimus quo, sequi numquam officiis dolorem voluptatibus ex maxime beatae aliquam aperiam, modi totam exercitationem ad. Pariatur culpa at porro.
+    </div>
     
 </body>
 </html>
