--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae nihil ducimus quo, sequi numquam officiis dolorem voluptatibus ex maxime beatae aliquam aperiam, modi totam exercitationem ad. Pariatur culpa at porro.
     
    </div>
-    
+   <div>
+    <h2>
+        git add korar niyom
+    </h2>
+    <ol>git add .</ol>
+    <ol>git commit -m"meaningful name"</ol>
+    <ol>git push</ol>
+   </div>
+    <img class="n" src ="images/1720621239564.JPG">
 </body>
 </html>
